T04 SUCCESSFULLY COMPLETE